<resources>
    <string name="app_name">TernaKu</string>
    <string name="text_deskripsi_aplikasi">Aplikasi kelola ternak yang siap membantu kamu!</string>
    <string name="logo_ternaku">Logo Ternaku</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registrasi_pengguna">Registrasi Pengguna</string>
    <string name="masukan_nama">Masukan Nama</string>
    <string name="nama">Nama</string>
    <string name="double_dot">:</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="email">Email</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="password">Password</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="alamat">Alamat</string>
    <string name="masukan_alamat">Masukan Alamat</string>
    <string name="no_telp">No Telp</string>
    <string name="masukan_no_hp">085XXXX</string>
    <string name="login_pengguna">Login Pengguna</string>
    <string name="kelola_hewan_ternak">Kelola Hewan Ternak</string>
    <string name="kelola_kandang_ternak">Kelola Kandang Ternak</string>
    <string name="kelola_obat_ternak">Kelola Obat Ternak</string>
    <string name="pengaturan_profil">Profil Pengguna</string>
    <string name="halo_silahkan_pilih_menu">Halo, Silahkan Pilih Menu</string>
    <string name="form_tambah_data_hewan_ternak">Form Tambah Data Hewan Ternak</string>
    <string name="masukan_nama_hewan">Masukan Nama Hewan:</string>
    <string name="contoh_ayam">Contoh: Ayam</string>
    <string name="masukan_ras_hewan">Masukan Ras Hewan:</string>
    <string name="contoh_boiler">Contoh: Boiler</string>
    <string name="masukan_jenis_hewan">Masukan Jenis Hewan:</string>
    <string name="masukan_jumlah_hewan">Masukan Jumlah Hewan:</string>
    <string name="contoh_200">Contoh: 200</string>
    <string name="jadwal_makan">Jadwal Makan:</string>
    <string name="pagi_siang">Pagi - Siang</string>
    <string name="siang_sore">Siang - Sore</string>
    <string name="pagi_sore">Pagi - Sore</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="tes">tes</string>
    <string name="nama_hewan">Nama Hewan:</string>
    <string name="ras_hewan">Ras Hewan:</string>
    <string name="jenis_hewan">Jenis Hewan:</string>
    <string name="jumlah_hewan">Jumlah Hewan:</string>
    <string name="jadwal_makan_detail">Jadwal Makan:</string>
    <string name="masukan_nama_kandang">Masukan nama kandang:</string>
    <string name="masukan_lokasi_kandang">Masukan Lokasi Kandang:</string>
    <string name="masukan_luas_kandang_m_u00b2">Masukan Luas Kandang (m²):</string>
    <string name="contoh_kandang_ayam_dan_kambing">Contoh: Kandang Ayam dan Kambing</string>
    <string name="contoh_sebelah_barat_ternak">Contoh: Sebelah Barat Ternak</string>
    <string name="contoh_20">Contoh: 20</string>
    <string name="detail_hewan">Detail Hewan</string>
    <string name="detail_kandang">Detail Kandang</string>
    <string name="nama_kandang">Nama Kandang:</string>
    <string name="lokasi_kandang">Lokasi Kandang:</string>
    <string name="luas_kandang">Luas Kandang:</string>
    <string name="pilih_kandang">Pilih Kandang:</string>
    <string name="form_tambah_data_kandang">Form Tambah Data Kandang</string>
    <string name="form_tambah_data_obat">Form Tambah Data Obat</string>
    <string name="masukan_jumlah_obat">Masukan Jumlah Obat:</string>
    <string name="contoh_vita_plex">Contoh: Vita Plex</string>
    <string name="masukan_nama_obat">Masukan nama obat:</string>
    <string name="contoh_memberikan_imunisasi_pada_hewan_terhadap_penyakit">Contoh: Memberikan imunisasi pada hewan terhadap penyakit ...</string>
    <string name="jelaskan_deskripsi_obat">Jelaskan Deskripsi Obat:</string>
    <string name="contoh_2_kali_sebulan">Contoh: 2 Kali Sebulan</string>
    <string name="masukan_aturan_penggunaan_obat">Masukan Aturan Penggunaan Obat:</string>
    <string name="detail_obat">Detail Obat</string>
    <string name="nama_obat">Nama Obat:</string>
    <string name="jumlah_obat">Jumlah Obat:</string>
    <string name="aturan_pengguanaan_obat">Aturan Obat:</string>
    <string name="add">add</string>
    <string name="textviewrecycleviewresult">TextViewRecycleViewResult</string>
    <string name="fiturkandang">fiturkandang</string>
    <string name="textviewrecycleviewadater">TextViewRecycleviewAdater</string>
    <string name="pilih_obat">Pilih Obat:</string>
    <string name="kandang_hewan_detail">Kandang Hewan:</string>
    <string name="obat_hewan">Obat Hewan:</string>
    <string name="edit_profil">Edit Profil</string>
    <string-array name="jenis_hewan">
        <item>Jenis Hewan</item>
        <item>Ovipar (Bertelur)</item>
        <item>Vivipar (Malahirkan)</item>
        <item>Ovovivipar (Bertelur dan Melahirkan)</item>
    </string-array>
    <string-array name="jadwal_makan">
        <item>Jadwal Makan</item>
        <item>Pagi-Siang</item>
        <item>Siang-Sore</item>
        <item>Pagi-Sore</item>
    </string-array>
    <string-array name="pilih_kandang">
        <item>Pilih Kandang</item>
    </string-array>
    <string-array name="pilih_obat">
        <item>Pilih Obat</item>
    </string-array>
</resources>