<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TambahKandangActivity">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/form_tambah_data_hewan_ternak"
        android:textColor="@color/tema_aplikasi3"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.124">

        <TextView
            android:id="@+id/textViewNamaKandang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/masukan_nama_kandang"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextNamaKandang"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="Contoh: Kandang Ayam dan Kambing"
            android:background="@drawable/input_box"
            android:ems="10"
            android:hint="@string/contoh_kandang_ayam_dan_kambing"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/textViewLokasiKandang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/masukan_lokasi_kandang"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextLokasiKandang"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="@string/masukan_ras_hewan"
            android:background="@drawable/input_box"
            android:ems="10"
            android:hint="@string/contoh_sebelah_barat_ternak"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/textViewLuasKandang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Masukan Jumlah Hewan"
            android:fontFamily="@font/amaranth"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/masukan_luas_kandang_m_u00b2"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextLuasKandang"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="MASUK"
            android:background="@drawable/input_box"
            android:ems="10"
            android:hint="@string/contoh_20"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />


        <Button
            android:id="@+id/buttonSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/simpan_data"
            app:icon="@drawable/ic_simpan"
            app:iconGravity="textEnd" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>