<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TambahObatActivity">



    <TextView
        android:id="@+id/textViewJudulFormObat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/form_tambah_data_obat"
        android:textColor="@color/tema_aplikasi3"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewJudulFormObat"
        app:layout_constraintVertical_bias="0.124">

        <TextView
            android:id="@+id/textViewNamaObat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/masukan_nama_obat"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextNamaObat"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="Contoh: Vita Plex"
            android:background="@drawable/input_box"
            android:ems="10"
            android:hint="@string/contoh_vita_plex"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/textViewJumlahObat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/masukan_jumlah_obat"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextJumlahObat"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="Contoh: 20"
            android:background="@drawable/input_box"
            android:ems="10"
            android:hint="@string/contoh_20"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/textViewDeskripsiObat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/jelaskan_deskripsi_obat"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextDeskripsiObat"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:autofillHints="@string/contoh_memberikan_imunisasi_pada_hewan_terhadap_penyakit"
            android:background="@drawable/input_box"
            android:ems="10"
            android:hint="@string/contoh_memberikan_imunisasi_pada_hewan_terhadap_penyakit"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />


        <TextView
            android:id="@+id/textViewAturanObat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/masukan_aturan_penggunaan_obat"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextAturanObat"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="Contoh: "
            android:background="@drawable/input_box"
            android:ems="10"
            android:hint="@string/contoh_2_kali_sebulan"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/buttonSimpanObat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/simpan_data"
            app:icon="@drawable/ic_simpan"
            app:iconGravity="textEnd" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>