<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:contentDescription="@string/logo_ternaku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="800dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textViewTitleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:text="@string/login_pengguna"
            android:textColor="@color/tema_aplikasi3"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="end|center_vertical"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal"
                android:text="@string/double_dot"
                android:textColor="@color/tema_aplikasi3"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:autofillHints="Masukan Email Kamu"
                    android:background="@drawable/input_box"
                    android:ems="10"
                    android:hint="@string/masukan_email"
                    android:inputType="textEmailAddress"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="end|center_vertical"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal"
                android:text="@string/double_dot"
                android:textColor="@color/tema_aplikasi3"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:autofillHints="Masukan Password Kamu"
                    android:background="@drawable/input_box"
                    android:ems="10"
                    android:hint="@string/masukan_password"
                    android:inputType="textPassword"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/tema_aplikasi3"
            android:insetLeft="50dp"
            android:insetRight="50dp"
            android:text="@string/login"
            app:cornerRadius="25dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>